# mds_fp_ih

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mds_fp_ih/: __init__.py  mds_fp_ih.py
tests/: test_mds_fp_ih.py
