[tool.poetry]
name = "mds_fp_ih"
version = "0.1.0"
description = "Final project for my MDS class."
authors = ["Isabella Hee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
